# U_I_Meter_Logger

RS232-Ethernet_Bridge/: Ethernet_bridge.PcbDoc  Ethernet_bridge.SchDoc  RS232-Ethernet_Bridge.PrjPcb  RS232-Ethernet_Bridge.PrjPcbStructure
RS232-Ethernet_Bridge/ETHERNET-RS485 Bridge/: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
RS232-Ethernet_Bridge/ETHERNET-RS485 Bridge/main/: CMakeLists.txt  ethernet_manager.c  ethernet_manager.h  littlefs_manager.c  littlefs_manager.h  main.c  rs485_master.c  rs485_master.h  web_server.c  web_server.h  websocket_client.c  websocket_client.h
RS232-Ethernet_Bridge/ETHERNET-RS485 Bridge/main/certs/: ca_cert.pem
RS232-Ethernet_Bridge/ETHERNET-RS485 Bridge/main/data/: main.html  script.js  style.css
RS232-Ethernet_Bridge/__Previews/: Ethernet_bridge.SchDocPreview
U_I_Meter/Bottom_Board/: U_I_Meter_Bottom.PrjPcb
U_I_Meter/Top_Board/: U_I_Meter_TOP.SchDoc
U_I_Meter/Top_Board/__Previews/: U_I_Meter_TOP.SchDocPreview
U_I_Meter/U_I_Meter_Bottom_ACS712/: U_I_Meter_Bottom_ACS712.PcbDoc  U_I_Meter_Bottom_ACS712.PrjPcb
